MB-24460: Subdoc: release item if doc_flag:Add and EEXISTS

When performing a multi-mutation with the doc_flag 'Add' set, if the
item does exist ensure it is released before returning EEXISTS to the
client.

This addresses the following memory leak:

    ==33026==ERROR: LeakSanitizer: detected memory leaks

    Direct leak of 104 byte(s) in 1 object(s) allocated from:
        #0 0x7f43bc927532 in operator new(unsigned long) (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x99532)
        #1 0x7f43b4c0191f in __unique_if<Item>::__unique_single std::make_unique<>() platform/include/platform/make_unique.h:43
        #2 0x7f43b4c0191f in StoredValue::toItem(bool, unsigned short) const ep-engine/src/stored-value.cc:166
        #3 0x7f43b4c2a3e9 in VBucket::getInternal(DocKey const&, void const*, EventuallyPersistentEngine&, int, get_options_t, bool) ep-engine/src/vbucket.cc:1576
        #4 0x7f43b4be1898 in KVBucket::getInternal(DocKey const&, unsigned short, void const*, vbucket_state_t, get_options_t) ep-engine/src/kv_bucket.cc:1434
        #5 0x7f43b4b9a5e1 in KVBucket::get(DocKey const&, unsigned short, void const*, get_options_t) ep-engine/src/kv_bucket.h:152
        #6 0x7f43b4b9a5e1 in EventuallyPersistentEngine::get(void const*, void**, DocKey const&, unsigned short, get_options_t) ep-engine/src/ep_engine.h:176
        #7 0x7f43b4b9a5e1 in EvpGet ep-engine/src/ep_engine.cc:268
        #8 0x7f43b1244d84  (<unknown module>)
        #9 0x6b38b0 in bucket_get(McbpConnection*, void**, DocKey const&, unsigned short, DocStateFilter) memcached/daemon/protocol/mcbp/engine_wrapper.cc:148
        #10 0x7723a3 in subdoc_fetch memcached/daemon/subdocument.cc:482
        #11 0x7723a3 in subdoc_executor memcached/daemon/subdocument.cc:394
        #12 0x7775fc in subdoc_multi_mutation_executor(McbpConnection*, void*) memcached/daemon/subdocument.cc:1568

Change-Id: Ib1958fa7f697baf60f8367dce977be2b611e2dad
Reviewed-on: http://review.couchbase.org/78347
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>